add version 1.3