@@ -1,3 +1,4 @@
+// service/impl/AddressServiceImpl.java
 package com.example.MyWeb.service.impl;
 
 import com.example.MyWeb.dto.user.AddressRequest;
@@ -6,36 +7,22 @@ import com.example.MyWeb.model.Address;
 import com.example.MyWeb.model.User;
 import com.example.MyWeb.repository.AddressRepository;
 import com.example.MyWeb.repository.UserRepository;
-import com.example.MyWeb.security.CustomUserDetails;
 import com.example.MyWeb.service.AddressService;
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class AddressServiceImpl implements AddressService {
 
-    private final AddressRepository addressRepository;
-    private final UserRepository userRepository;
+    private final AddressRepository addressRepo;
+    private final UserRepository userRepo;
 
-    // Lấy user hiện tại từ SecurityContext
-    private User getCurrentUser() {
-        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-        CustomUserDetails principal = (CustomUserDetails) auth.getPrincipal();
-        Long userId = principal.getId();
-
-        return userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-    }
-
-    private AddressResponse toAddressResponse(Address a) {
+    private AddressResponse toDto(Address a) {
         return AddressResponse.builder()
                 .id(a.getId())
                 .fullName(a.getFullName())
@@ -45,32 +32,28 @@ public class AddressServiceImpl implements AddressService {
                 .district(a.getDistrict())
                 .province(a.getProvince())
                 .country(a.getCountry())
-                .default(a.isDefault())
+                .isDefault(a.isDefault())
                 .createdAt(a.getCreatedAt())
                 .build();
     }
 
     @Override
-    public List<AddressResponse> getMyAddresses() {
-        User user = getCurrentUser();
-        List<Address> list = addressRepository
-                .findByUserOrderByCreatedAtDesc(user);
-        return list.stream()
-                .map(this::toAddressResponse)
-                .collect(Collectors.toList());
+    public List<AddressResponse> list(Long userId) {
+        return addressRepo.findAllByUserIdOrderByCreatedAtDesc(userId)
+                .stream().map(this::toDto).toList();
     }
 
     @Override
     @Transactional
-    public AddressResponse createAddress(AddressRequest req) {
-        User user = getCurrentUser();
+    public AddressResponse create(Long userId, AddressRequest req) {
+        User user = userRepo.findById(userId)
+                .orElseThrow(() -> new RuntimeException("User not found"));
 
-        // Nếu isDefault = true -> clear default cũ
         if (Boolean.TRUE.equals(req.getIsDefault())) {
-            addressRepository.clearDefaultForUser(user);
+            addressRepo.clearDefaultByUserId(userId);
         }
 
-        Address address = Address.builder()
+        Address a = Address.builder()
                 .user(user)
                 .fullName(req.getFullName())
                 .phone(req.getPhone())
@@ -79,20 +62,17 @@ public class AddressServiceImpl implements AddressService {
                 .district(req.getDistrict())
                 .province(req.getProvince())
                 .country(req.getCountry() != null ? req.getCountry() : "Vietnam")
-                .isDefault(Boolean.TRUE.equals(req.getIsDefault()))
                 .createdAt(LocalDateTime.now())
+                .isDefault(Boolean.TRUE.equals(req.getIsDefault()))
                 .build();
 
-        address = addressRepository.save(address);
-        return toAddressResponse(address);
+        return toDto(addressRepo.save(a));
     }
 
     @Override
     @Transactional
-    public AddressResponse updateAddress(Long id, AddressRequest req) {
-        User user = getCurrentUser();
-
-        Address a = addressRepository.findByIdAndUser(id, user)
+    public AddressResponse update(Long userId, Long addressId, AddressRequest req) {
+        Address a = addressRepo.findByIdAndUserId(addressId, userId)
                 .orElseThrow(() -> new RuntimeException("Address not found"));
 
         if (req.getFullName() != null)
@@ -110,41 +90,30 @@ public class AddressServiceImpl implements AddressService {
         if (req.getCountry() != null)
             a.setCountry(req.getCountry());
 
-        if (req.getIsDefault() != null) {
-            if (req.getIsDefault()) {
-                addressRepository.clearDefaultForUser(user);
-                a.setDefault(true);
-            } else {
-                a.setDefault(false);
-            }
+        if (req.getIsDefault() != null && req.getIsDefault()) {
+            addressRepo.clearDefaultByUserId(userId);
+            a.setDefault(true);
+        } else if (req.getIsDefault() != null && !req.getIsDefault()) {
+            a.setDefault(false);
         }
 
-        return toAddressResponse(a);
+        return toDto(addressRepo.save(a));
+    }
+
+    @Override
+    public void delete(Long userId, Long addressId) {
+        Address a = addressRepo.findByIdAndUserId(addressId, userId)
+                .orElseThrow(() -> new RuntimeException("Address not found"));
+        addressRepo.delete(a);
     }
 
     @Override
     @Transactional
-    public AddressResponse setDefaultAddress(Long id) {
-        User user = getCurrentUser();
-
-        Address a = addressRepository.findByIdAndUser(id, user)
+    public AddressResponse setDefault(Long userId, Long addressId) {
+        Address a = addressRepo.findByIdAndUserId(addressId, userId)
                 .orElseThrow(() -> new RuntimeException("Address not found"));
-
-        // Clear default cũ
-        addressRepository.clearDefaultForUser(user);
+        addressRepo.clearDefaultByUserId(userId);
         a.setDefault(true);
-
-        return toAddressResponse(a);
-    }
-
-    @Override
-    @Transactional
-    public void deleteAddress(Long id) {
-        User user = getCurrentUser();
-
-        Address a = addressRepository.findByIdAndUser(id, user)
-                .orElseThrow(() -> new RuntimeException("Address not found"));
-
-        addressRepository.delete(a);
+        return toDto(addressRepo.save(a));
     }
 }
